# judge-from-scratch

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: 00_sample_bbq.py  00b_expand_bbq.py  01_generate_candidates.py  01b_enrich_candidates.py  02_construct_pairs.py  03a_holdout_eval.py  04_label_pairs.py  05_format_datasets.py  _format_helpers.py  judge_system_prompt.md  labeling_prompt.md  synth_rejected.py
data/formatted/: .synth_cost_ledger.jsonl  dpo.meta.json  sft.meta.json  synthesis_dryrun.md  synthesis_dryrun.meta.json  synthesis_results.jsonl
data/labeled/: .batches.json  .cost_ledger.jsonl  comparison_v1_v3.json  dropped_pairs.jsonl  dryrun_opus.jsonl  dryrun_opus_v1.jsonl  dryrun_report.json  dryrun_report.md  dryrun_report_v1.json  dryrun_report_v1.md  dryrun_sonnet.jsonl  dryrun_sonnet_v1.jsonl  labeled_pairs.meta.json
data/pairs/: eval_holdout.meta.json  eval_set_unlabeled.jsonl  pairs.jsonl  pairs.meta.json  pairs_to_label.jsonl  pairs_unused_religion.jsonl
data/raw/: bbq_sample.jsonl  bbq_sample.meta.json
data/raw/batch_inputs/: 20260426T143959Z_40_9c47.idmap.jsonl  20260426T143959Z_40_9c47.jsonl  20260426T144253Z_40_1e39.idmap.jsonl  20260426T144253Z_40_1e39.jsonl
deployment/: benchmark_results.json  example_client.py
deployment/modal/: vllm_bench.py
deployment/ollama/: README.md
deployment/vllm/: Dockerfile  README.md  docker-compose.yml
docs/: claude-code-prompts.md  fine-tuning-primer.md  how-this-was-built.md  project-status.md  story-data.md  story-training.md  troubleshooting.md
docs/stage-refs/: stage0.md  stage1.md  stage10.md  stage2.md  stage3.md  stage4.md  stage5.md  stage6.md  stage7.md  stage8.md  stage9.md
eval/: eval_harness.py  label_tool.py
eval/modal/: download_baseline.py  merge_adapter.py  run_eval.py  vllm_infer.py
eval/results/: stage8_final_20260508T115420.json  stage8_final_20260508T115420.md  stage8_final_20260508T121153.json  stage8_final_20260508T121153.md
publish/: README.md  build_modelfile.py  export_gguf.py  upload_hf.py
publish/model_cards/: gemma4-social-bias-judge-gguf.md  gemma4-social-bias-judge-pairs.md  gemma4-social-bias-judge-sft.md  gemma4-social-bias-judge.md
publish/modelfiles/: Modelfile.Q5_K_M  Modelfile.Q5_K_M-sft  Modelfile.Q8_0  Modelfile.Q8_0-sft
scripts/: common.py  compare_dryruns.py  rehydrate_dryrun_records.py
space/: .gitattributes  README.md  app.py  requirements.txt
tests/: conftest.py  test_05_format_datasets.py  test_build_prompt.py  test_compare_dryruns.py  test_compute_verdict.py  test_construct_pairs.py  test_cost_ledger.py  test_dpo_config.py  test_dpo_overcollapse_verdict.py  test_dpo_thinking_assertion.py  test_enrich_candidates.py  test_eval_harness.py  test_holdout_eval.py  test_label_pairs.py  test_parse_chosen.py  test_publish.py  test_sft_config.py  test_sft_text_builder.py  test_sft_thinking_assertion.py  test_vllm_infer.py
tests/eval/: test_label_tool.py
train/: RESULTS.md
train/configs/: README.md  dpo.yaml  sft.yaml
train/modal/: _cost_ledger.py  dpo.py  sft.py  smoke_test.py  upload_data.py
