[project]
name = "reval-judge"
version = "0.1.0"
description = "Fine-tuning Gemma 3 4B into a specialized bias evaluation judge for the REVAL framework."
readme = "README.md"
requires-python = "==3.11.*"
authors = [
    { name = "Krishna Kartik", email = "krishnakartik1@gmail.com" },
]
dependencies = [
    "unsloth",
    "trl",
    "peft",
    "transformers",
    "datasets",
    "accelerate",
    "bitsandbytes",
    "openai",
    "anthropic",
    "python-dotenv",
    "scikit-learn",
    "pandas",
    "tqdm",
    "together>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
