[project]
name = "reval-judge"
version = "0.1.0"
description = "judge-from-scratch — fine-tuning Gemma 4 E4B into a specialized social-bias evaluation judge."
readme = "README.md"
requires-python = "==3.11.*"
authors = [
    { name = "Krishna Kartik", email = "krishnakartik1@gmail.com" },
]
dependencies = [
    "unsloth",
    "trl",
    "peft",
    "transformers",
    "datasets",
    "accelerate",
    "bitsandbytes",
    "openai",
    "anthropic",
    "together",
    "python-dotenv",
    "scikit-learn",
    "pandas",
    "tqdm",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.12",
]
